# GraphPi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  export_graph.sh  generate_update.sh  graph_client_exp.sh  large_graph.sh  limit_match.sh  match_patents.sh  merge.sh  testio.cpp
include/: dataloader.h  graph.h  pattern.h  schedule.h  vertex_set.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common.cpp  dataloader.cpp  export_graph.cpp  export_large_graph.cpp  generate_update.cpp  graph.cpp  graph_client.cpp  graph_extern.cpp  graph_genenerate.cpp  in_exclusion_performance_test.cpp  merge.cpp  pattern.cpp  pattern_match.cpp  performance_compare_test.cpp  run_brute_force_tc.cpp  run_general_tc.cpp  run_mpi_trivial.cpp  schedule.cpp  schedule_printer.cpp  vertex_set.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  asgs_test[1]_include.cmake  asgs_test[1]_tests.cmake  asgs_testing.cpp  cmake_install.cmake  graph_mining_test.cpp  pattern_matching_test.cpp  performance_compare_test.cpp  performance_modeling_test.cpp  restricts_compare_test.cpp  restricts_generation_test.cpp  schedule_compare_test.cpp  schedule_test.cpp
tianhe/: CMakeLists.txt  Makefile  all_restricts_test.cpp  cmake_install.cmake  house_twitter_test.cpp  our_schedule_our_restricts_test.cpp  restricts_compare_test.cpp  schedule_restricts_test.cpp  schedule_restricts_test_old.cpp
